Try to fix buttons not working on IOS

--- a/styles2.css
+++ b/styles2.css
@@ -81,6 +81,8 @@ img{
     flex: auto;
     max-width: 100%;
 
+    cursor: pointer;
+
 }
 
 
